<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog4" >

    <LinearLayout
        android:id="@+id/lay_finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/lay_view"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/version_update"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#000000"
            android:text="@string/update_content"
            android:paddingVertical="10dp"
            android:textSize="16sp" />
        <ScrollView
            android:id="@+id/lay_work"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:scrollbars="none"
            android:background="#ffffff">
            <TextView
                android:id="@+id/version_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#666666"
                android:textSize="16sp" />
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#e5e5e5" />
        <LinearLayout
            android:id="@+id/version_progressbar_box"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/downtext"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:text="@string/download"
                android:textColor="#333"
                android:textSize="16dp"
                android:gravity="center"
                />
            <ProgressBar
                android:id="@+id/version_progressbar"
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="0"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/progressbar_bg"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnbox"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:visibility="visible">

            <TextView
                android:id="@+id/cancal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/next_wraing"
                android:textColor="#999999"
                android:textSize="16dp"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e5e5e5" />

            <TextView
                android:id="@+id/update"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/update_now"
                android:textColor="#333333"
                android:textSize="16dp"
                android:gravity="center"
                android:textFontWeight="700"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
